fix: remove scrollbars in Chrome

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -9,7 +9,6 @@ a {
 
 .body {
   display: block;
-  overflow: scroll;
   max-height: 100vh;
   background-color: #0b1c2f;
   font-family: Inter, sans-serif;
